# newproject

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: StringBuilder.h
src/: StringBuilder.cpp
